--- a/.github/workflows/ghpages-release.yaml
+++ b/.github/workflows/ghpages-release.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           rustup target add wasm32-unknown-unknown
       - name: Run trunk build
-        run: RUSTFLAGS='--cfg getrandom_backend="wasm_js"' trunk build --public-url "/yew-admin-boilerplate" --release
+        run: RUSTFLAGS='--cfg getrandom_backend="wasm_js"' trunk build --public-url "/yew-admin-boilerplate/" --release
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
