--- a/.github/workflows/ghpages-release.yaml
+++ b/.github/workflows/ghpages-release.yaml
@@ -37,6 +37,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: "./dist"
+      - name: SPA handler
+        run: cp ./404.html ./dist/404.html
 
   deploy:
     needs: build
