--- a/.github/workflows/ghpages-release.yaml
+++ b/.github/workflows/ghpages-release.yaml
@@ -31,6 +31,8 @@ jobs:
           rustup target add wasm32-unknown-unknown
       - name: Run trunk build
         run: RUSTFLAGS='--cfg getrandom_backend="wasm_js"' trunk build --public-url "/yew-admin-boilerplate/" --release
+      - name: SPA handler using 404 redirect
+        run: cp ./404.html ./dist/404.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -38,8 +40,6 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: "./dist"
-      - name: SPA handler
-        run: cp ./404.html ./dist/404.html
 
   deploy:
     needs: build
